@@ -127,6 +127,11 @@ Bugs are filed under the CDT project, CDT-Contrib component</td>
 </tr>
 
 <tr>
+<td><a href="http://dev.eclipse.org/viewcvs/index.cgi/%7Echeckout%7E/org.eclipse.cdt-contrib/org.eclipse.cdt.rpm-home/planning/new.html?cvsroot=Tools_Project">What's New</a></td>
+<td>Record of changes between major releases of Eclipse-RPM</td>
+</tr>
+
+<tr>
 <td class="subsection" colspan="2">Developer Resources</td>
 </tr>
 
